--- a/public_html/scss/component/_top-bar.scss
+++ b/public_html/scss/component/_top-bar.scss
@@ -7,6 +7,7 @@
 .elemento-lista--top-panel{
     float:right;
     display: inline;
-    padding: 3px;  
+    padding: 3px; 
+    margin:5px 5px;
 }
 
