--- a/public_html/scss/main.scss
+++ b/public_html/scss/main.scss
@@ -4,3 +4,5 @@
 @import "layout/_layout.scss";
 @import "component/_top-bar.scss";
 @import "component/_verticalMenu.scss";
+@import "component/_images.scss";
+@import "component/_contenedor.scss";
