--- a/public_html/scss/component/_verticalMenu.scss
+++ b/public_html/scss/component/_verticalMenu.scss
@@ -1,5 +1,6 @@
 .vertical-menu{
     font-family: "Lucida Grande",Verdana,Lucida,Helvetica,Arial,sans-serif;
+   
 }
 .vertical-menu__item-container-0{
     list-style: none;
@@ -8,6 +9,7 @@
 }
 .vertical-menu__item-0{
     padding-top: 20px;
+    
 }
 
 .vertical-menu__item-0--close{
@@ -22,10 +24,31 @@
     border:0.1px solid #EDEDED;
    
 } 
-.vertical-menu__item-0--close:before{
-    content:'\f2c0';
+#home.vertical-menu__item-0--close:before{
+    margin: 20px;
+    content:'\f015';
     font-family: FontAwesome; 
     
+}
+#calendar.vertical-menu__item-0--close:before{
+    margin: 20px;
+    content:'\f073';
+    font-family: FontAwesome; 
+}
+#userInterface.vertical-menu__item-0--close:before{
+    margin: 20px;
+    content:'\f0ea';
+    font-family: FontAwesome; 
+}
+#contacto.vertical-menu__item-0--close:before{
+    margin: 20px;
+    content:'\f2b9';
+    font-family: FontAwesome; 
+}
+#forums.vertical-menu__item-0--close:before{
+    margin: 20px;
+    content:'\f1d7';
+    font-family: FontAwesome; 
 }
 
 .vertical-menu__item-0--open:before{
@@ -65,25 +88,25 @@
 }
 .vertical-menu-container--icono_open:after{
     float:right;   
-    content:"\f2c0";
+    content:"\f068";
     font-family: FontAwesome; 
     padding-right: 10px;
 }    
 .vertical-menu-container--icono_close:after{
     float:right;   
-    content:"\f2c0";
+    content:"\f067";
     font-family: FontAwesome; 
     padding-right: 10px;
 }    
 .vertical-menu-item--icono_open:after{
     float:right;   
-    content:"\f2c0";
+    content:"\f067";
     font-family: FontAwesome; 
     padding-right: 10px;
 }    
 .vertical-menu-item--icono_close:after{
     float:right;   
-    content:"\f2c0";
+    content:"\f067";
     font-family: FontAwesome; 
     padding-right: 10px;
 }   
@@ -93,7 +116,11 @@
     display:inline-block;
     text-decoration: none;
     color:#262626;
+} 
    
+#link.vertical-menu__link-0{
+    line-height: 50px;
+    margin-left: 10px;
 }
 .visible{
     display:hidden;
