--- a/public_html/scss/abstract/_variables.scss
+++ b/public_html/scss/abstract/_variables.scss
@@ -8,3 +8,8 @@ $size-variations:(xs),
                  (l),
                  (xl);
 $num-columns:12;
+$size-column:   (xss,0px),
+                (xs,544px),
+                (sm,750px),
+                (md,970px),
+                (lg,1170px);
